2017-09-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha03 final changes';git push
	git tag -a 4.6.9-alpha03 -m 'CMake implementation;data size estimates with ncks -D 2;--lst_xtr';git push --tags

	* Fix calculation of ram_sz_crr in nco_prn()

2017-09-05  Charlie Zender  <zender@uci.edu>

	* Add CDF5 presence to ncks -r report

	* Refine CMake templates

	* CMake implementation from Pedro

	* round() filesize estimates instead of truncating them

2017-09-04  Charlie Zender  <zender@uci.edu>

	* fnc_nm (only!) must be explicit shared for g++ 4.8.4 (travis)

	* Update travis to work with Ubuntu 14.04, move from libnetcdf6 to libnetcdfc7

	* Discriminate between KiB and KB (kibibytes and kilobytes) in diagnostics

2017-09-01  Charlie Zender  <zender@uci.edu>

	* ncks report computed data size when dbg_lvl >= 2

2017-08-31  Charlie Zender  <zender@uci.edu>

	* Add stubs to compute/report total expected uncompressed data size

2017-08-30  Charlie Zender  <zender@uci.edu>

	* Clean-up MD5 messages and nco_fl_utl.c INFO messages

2017-08-29  Charlie Zender  <zender@uci.edu>

	* ncclimo -v var_lst_rx finally works as intended!

	* ncclimo fix --lst_xtr to exclude bounds coordinates so, e.g., time_bnds not explicitly
	passed to seasonal climos that have replaced it	with climatology_bounds

2017-08-25  Charlie Zender  <zender@uci.edu>

	* Add --lst_xtr stubs to ncclimo to expand var_lst rx

	* Add ncks --lst_xtr to print extraction list for ncremap and ncclimo

	* ncremap/ncclimo correct ERWG location for module load ncl/6.3.0 on rhea

	* Use appropriate fl_out_fmt to print ncgen hint in CDL

2017-08-24  Charlie Zender  <zender@uci.edu>

	* Add/clarify syntax to some regridder HINTs

	* Put MD5 in operator self-help for ncks

2017-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha02 final changes';git push